Fix for alignment in code blocks

--- a/www/css/style-grey.windows.css
+++ b/www/css/style-grey.windows.css
@@ -2953,6 +2953,10 @@ code {
 pre {
 	white-space: pre-wrap;
 }
+.post-body pre,
+.comment-body pre {
+	text-align: left;
+}
 code {
 	font-size: 0.95em;
 	display: inline-block;
